--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   db:
     image: postgres
   web:
-    build: .
+    build: ./web
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/code
+      - ./web:/code
     ports:
       - "8000:8000"
     depends_on:
