Make the password IDs more secure.
This makes two improvements:

 1. Password IDs returned from the service are now randomly generated
    GUIDs. This is better than the semi-sequential object IDs generated
    by MongoDB.

 2. Password IDs are hashed together with a second secret before being
    inserted into the password database. This makes it much harder to
    match up passwords with user names. Unless the attacker has both the
    application secrets in addition to the user and password database,
    cracking user credentials will be impossible.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - ./passwords:/code
     environment:
       PASSWORD_SECRET: "vgauiLoEurnGEkKrnWk9RkE7jegAGB7zsgjipmv375C9xBAi1x0Dgv7rZHJFOxVA"
+      KEY_SECRET: "rGkVhNBbuv6LtFzrPOrFwJmzilYajN2Cm8qrWWz9ztkoU2iPClq4DjkO5B19hBG5"
       WORK_FACTOR: "12"
 
   db:
